--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                        <b>Ben Yusuf OSMANOĞLU İstanbul Rumeli Üniversitesi 1.Sınıf öğrencisiyim. Yapmış olduğum site kendimi anlatmak ve de öz geçmişim içidir.
                        Şu anda LC Waikiki de çalışmaktayım.<br>
                        Ü</b></p>
-                    <a href="https://docs.google.com/forms/d/1xl3RvqoSUQXRWRfhY9NZkPaucC9-2fMTrgn-KyVn884/edit" class="btn">İletişime Geç</a>
+                    <a href="https://forms.gle/zDFi9W89Kpd3oZwUA" class="btn">İletişime Geç</a>
                     <a href="PDF/Yusuf-Osmanoğlucv.pdf" class="oz"download><i class='bx bxs-id-card icon' id="ff"><b> CV Öz Geçmiş</b></i></a>
                 </div>
                 <div class="col-2" id="circle-ring">
