--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
                 <div class="action-buttons">
                     <a href="https://www.linkedin.com/in/yusuf-osmanoğlu-84275a253/" title="Linkedin_Profile"> Linkedin </a>
-                    <a href="https://github.com/Yusuf-Osmanoglus" class="secondary" title="GitHub_Profile"> GitHub </a>
+                    <a href="https://github.com/Yusuf-Osmanoglu" class="secondary" title="GitHub_Profile"> GitHub </a>
                     <a href="assets/Yusuf-Osmanoğlu.pdf" class="secondary" title="Curriculum Vitae"> Curriculum Vitae </a>
 
                 </div>
