--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <article class="card">
             <div class="background">
-                <img src="assets/profile.jpg" alt="profile">
+                <img src="assets/profile.png" alt="profile">
             </div>
             <div class="content">
                 <h2>Yusuf Osmanoğlu </h2>
