--- a/index.html
+++ b/index.html
@@ -1,38 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Yusuf Osmanoglu</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <article class="card">
-            <div class="background">
-                <img src="assets/profile.png" alt="profile">
-            </div>
-            <div class="content">
-                <h2>Yusuf Osmanoğlu </h2>
-                <p>
-                    Student: <a href="https://www.topkapi.edu.tr/" title="topkapiEdu">İstanbul Topkapı Üniversitesi</a>
-                </p>
-                <p>Helping With:</p>
-                <ul class="chips">
-                    <li class="chip">React.js</li>
-                    <li class="chip">React-Native.js</li>
-                    <li class="chip">Node.js</li>
-                </ul>
-                <div class="action-buttons">
-                    <a href="https://www.linkedin.com/in/yusuf-osmanoğlu-84275a253/" title="Linkedin_Profile"> Linkedin </a>
-                    <a href="https://github.com/Yusuf-Osmanoglu" class="secondary" title="GitHub_Profile"> GitHub </a>
-                    <a href="assets/Yusuf-Osmanoğlu.pdf" class="secondary" title="Curriculum Vitae"> Curriculum Vitae </a>
-
-                </div>
-            </div>
-        </article>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>yusuf-osmanoglu</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
